# Chatroom

client/: CMakeCache.txt  CMakeLists.txt  Makefile  client  cmake_install.cmake
client/headers/: Client.hpp  Console.hpp
client/src/: Client.cpp  main.cpp
server/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  server
server/headers/: Console.hpp  Group.hpp  Server.hpp  Tablefile.hpp  Timestamp.hpp  User.hpp  Userserver.hpp
server/src/: Group.cpp  Server.cpp  Tablefile.cpp  Timestamp.cpp  User.cpp  Userserver.cpp  main.cpp
server/tables/: bans.txt  blocks.txt  buffer.txt  g_msg.txt  groups.txt  pv_msg.txt  user_group.txt  users.txt
